--- a/ui/src/app/login/login.component.scss
+++ b/ui/src/app/login/login.component.scss
@@ -17,3 +17,14 @@
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
   }
+
+  .app-container {
+    min-height: 320px;
+    overflow: hidden;
+}
+
+.btn-delete-user {
+    width: 40px;
+    text-align: center;
+    box-sizing: content-box;
+}
